// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextLink should render with chevron props 1`] = `
<a
  className="link"
>
  Google
  <ChevronIcon
    className="chevronRightSide"
    direction="up"
    size="hero"
  />
</a>
`;

exports[`TextLink should render with children 1`] = `
<a
  className="link"
>
  Google
</a>
`;

exports[`TextLink should render with className 1`] = `
<a
  className="link foo"
/>
`;

exports[`TextLink should render with defaults 1`] = `
<a
  className="link"
/>
`;

exports[`TextLink should render with down chevron 1`] = `
<a
  className="link"
>
  Google
  <ChevronIcon
    className="chevronRightSide"
    direction="down"
    size="substandard"
  />
</a>
`;

exports[`TextLink should render with left chevron 1`] = `
<a
  className="link"
>
  <ChevronIcon
    className="chevronLeftSide"
    direction="left"
    size="substandard"
  />
  Google
</a>
`;

exports[`TextLink should render with right chevron 1`] = `
<a
  className="link"
>
  Google
  <ChevronIcon
    className="chevronRightSide"
    direction="right"
    size="substandard"
  />
</a>
`;

exports[`TextLink should render with up chevron 1`] = `
<a
  className="link"
>
  Google
  <ChevronIcon
    className="chevronRightSide"
    direction="up"
    size="substandard"
  />
</a>
`;
